# RTS-project

./: .gitignore  README.md  SPEC.md  config.yaml  pyproject.toml  requirements.txt
src/rts_sim/: __init__.py  __main__.py  cli.py  config.py  models.py
src/rts_sim/analysis/: __init__.py  aggregate.py  plots.py
src/rts_sim/experiments/: __init__.py  metrics.py  runner.py
src/rts_sim/partition/: __init__.py  federated.py  grouping.py
src/rts_sim/resources/: __init__.py  requests.py  segments.py
src/rts_sim/sched/: __init__.py  ca_edf.py  deadlock.py  lock.py
src/rts_sim/utils/: __init__.py  logging.py  seeds.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_models.py
